--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="https://kit.fontawesome.com/e34c0930ea.css" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/e34c0930ea.css" crossorigin="anonymous"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins&display=swap" rel="stylesheet">
@@ -118,7 +118,7 @@
         </div>
         <div class="motorcycle">
             <div class="circle">
-                <img src="Images/motorcycle1.png" alt="motorcycle">
+                <img src="images/motorcycle1.png" alt="motorcycle">
                 <div class="inner-md-circle"></div>
                 <div class="inner-sm-circle"></div>
             </div>
