feat: fisiere noi

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="motorcycle">
             <div class="circle">
-                <img src="images/motorcycle1.png" alt="motorcycle">
+                <img src="motorcycle1.png" alt="motorcycle">
                 <div class="inner-md-circle"></div>
                 <div class="inner-sm-circle"></div>
             </div>
